@@ -5,7 +5,7 @@ AbstractChart_ExtendedLegend=E&xtended legend
 AbstractChart_Hours=hours
 AbstractChart_Left=Left
 AbstractChart_LegendPosition=Legend position
-AbstractChart_LogartithmicScale=Logarithmic scale
+AbstractChart_LogartithmicScale=L&ogarithmic scale
 AbstractChart_Minutes=minutes
 AbstractChart_Options=Options
 AbstractChart_RefreshInterval=Refresh interval (seconds)
